8367013: Add Atomic<T> to package/replace idiom of volatile var plus AtomicAccess:: operations

Reviewed-by: stefank, aboldtch, jsjolen